fdo#65856 allow shift cells in paste special for copy-mode

Change-Id: I7a7e13104e7256da9a82e16e14ddfa04e35e7f8a
Reviewed-on: https://gerrit.libreoffice.org/4525
Tested-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit e513fffeac1f4a814f644f156d88fc8810af4e46)

Signed-off-by: Eike Rathke <erack@redhat.com>